# kinect_filter

./: CMakeLists.txt  README.md  package.xml
config/: settings.yaml
include/kinect_filter/: characterize_noise.h  kinect_filter.h
launch/: characterize.launch
src/: characterize_noise.cpp  kinect_filter.cpp
